# jira_srcum_velocity

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
sprint_velocity/: config.json  config.py  main.py  plot_matplolib.py  utils.py
tests/: conftest.py  test_command_mixed_settings.py  test_command_settings_add_sprint_to_project.py  test_command_settings_backupfile.py  test_command_settings_board.py  test_command_settings_filestorage.py  test_command_settings_project.py  test_command_velocity_graph.py  test_command_velocity_graph_plain.py  test_config_creation.py
