[tool.poetry]
name = "sprint_velocity"
version = "1.0.4"
description = "Generating a Matplotlib plot to see the scrum velocity for a sprint."
authors = ["FelixTheC <fberndt87@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    "license.md",
]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Matplotlib",
]
homepage = "https://github.com/FelixTheC/jira_srcum_velocity"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "*"
matplotlib = "*"
typer = {extras = ["all"], version = "*"}
requests = "*"
pendulum = "*"
strongtyping = "*"


[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "*"

[tool.poetry.scripts]
jira_statistics = "sprint_velocity.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
combine_as_imports = true
line_length = 100
profile = "black"
